--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.profiles.active=test
+spring.jpa.open-in-view=true
+server.port=2021
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=create
