--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
 			<plugin>
 				 <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-resources-plugin</artifactId>
-    <version>3.2.0</version>
+    <version>3.2.0</version><!--$NO-MVN-MAN-VER$-->
     <configuration>
         <propertiesEncoding>UTF-8</propertiesEncoding>
         <nonFilteredFileExtensions>
