--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
 	<name>course</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
@@ -34,31 +34,37 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-	<dependency>
+		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
 
 	<build>
-		
+
 
 		<plugins>
 			<plugin>
-				 <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-resources-plugin</artifactId>
-    <version>3.2.0</version><!--$NO-MVN-MAN-VER$-->
-    <configuration>
-        <propertiesEncoding>UTF-8</propertiesEncoding>
-        <nonFilteredFileExtensions>
-            <nonFilteredFileExtension>xls</nonFilteredFileExtension>
-            <nonFilteredFileExtension>xlsx</nonFilteredFileExtension>
-        </nonFilteredFileExtensions>
-    </configuration>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.2.0</version><!--$NO-MVN-MAN-VER$ -->
+				<configuration>
+					<propertiesEncoding>UTF-8</propertiesEncoding>
+					<nonFilteredFileExtensions>
+						<nonFilteredFileExtension>xls</nonFilteredFileExtension>
+						<nonFilteredFileExtension>xlsx</nonFilteredFileExtension>
+					</nonFilteredFileExtensions>
+				</configuration>
 			</plugin>
 		</plugins>
-		
+
 
 	</build>
 
