--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,2 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 spring.jpa.open-in-view=true
-server.port=2019
-spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=create
